<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/shapeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/expandable_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insulator"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/insulatorCheckbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/shape_checkbox_background"
            android:button="@null"
            android:checked="true" />

        <ImageView
            android:id="@+id/shapeExpandableIndicator"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_triangle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/insulatorsExpandableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:padding="12dp"
        app:el_duration="1000"
        app:el_expanded="false"
        tools:el_expanded="true"
        app:el_parallax="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeLinearLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/probabilityInsulator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/probability"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/shapeDefectsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/expandable_button_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/defects"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/shapeDefectsExpandableIndicator"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_triangle" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/insulatorsDefectsExpandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4F4F4"
                android:padding="12dp"
                app:el_duration="1000"
                app:el_expanded="false"
                tools:el_expanded="true"
                app:el_parallax="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shapeLinearLayout">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/defectsList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="LinearLayoutManager" />
            </net.cachapa.expandablelayout.ExpandableLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/shapeExtraInformationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/expandable_button_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/extra_information"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/shapeExtraInformationExpandableIndicator"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_triangle" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/insulatorsExtraInformationExpandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4F4F4"
                android:padding="12dp"
                app:el_duration="1000"
                app:el_expanded="false"
                app:el_parallax="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shapeLinearLayout">


                <TextView
                    android:id="@+id/insulatorExtraInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </net.cachapa.expandablelayout.ExpandableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </net.cachapa.expandablelayout.ExpandableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>